[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "nodeid"
path = "src/nodeid.rs"


[[bin]]
name = "broadcast"
path = "src/broadcast.rs"

[dependencies]
async-trait = "0.1.81"
maelstrom-node = "0.1.6"
serde = "1.0.208"
serde_json = "1.0.125"
