[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "nodeid"
path = "src/nodeid.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast.rs"

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "kafka"
path = "src/kafka.rs"

[[bin]]
name = "tx"
path = "src/tx.rs"

[dependencies]
async-trait = "0.1.81"
maelstrom-node = "0.1.6"
rand = "0.8.5"
serde = "1.0.208"
serde_json = "1.0.125"
serde_with = "3.9.0"
tokio = "1.40.0"
tokio-context = "0.1.3"
